--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/food.jpg
-    - assets/background.jpg
+    # - assets/food.jpg
+    # - assets/background.jpg
     - assets/forestBackground.png
     - assets/w-bg.png
 
