--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   scoped_model: "^1.0.1"
+  cloud_firestore: ^0.12.11
 
 dev_dependencies:
   flutter_test:
