--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   cupertino_icons: ^0.1.0
   scoped_model: "^1.0.1"
   cloud_firestore: ^0.12.11
+  firebase_storage: ^3.0.5
+  firebase_core: ^0.4.0+1
+  firebase_auth: ^0.14.0
+  image_picker: ^0.6.1
 
 dev_dependencies:
   flutter_test:
