--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,11 @@ dependencies:
   firebase_core: ^0.4.0+1
   firebase_auth: ^0.14.0
   image_picker: ^0.6.1
+  stripe_payment: ^1.0.5
+  cached_network_image: ^2.0.0-rc.1
+  flutter_cache_manager: ^1.1.3
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
