--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   stripe_payment: ^1.0.5
   cached_network_image: ^2.0.0-rc.1
   flutter_cache_manager: ^1.1.3
+  date_range_picker: ^1.0.5
+  intl: ^0.16.0
+
 
   
 dev_dependencies:
