--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,10 @@
 name: wylnd
 description: A new Flutter project.
 
+
+environment:
+  sdk: '>=2.10.0 <3.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
@@ -8,11 +12,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  scoped_model: "^1.0.1"
+  scoped_model: "^1.1.0"
+  cloud_firestore: ^0.12.11
+  firebase_storage: ^3.0.5
+  firebase_core: ^0.4.0+1
+  firebase_auth: ^0.14.0
+  google_sign_in: ^4.0.14
+  image_picker: ^0.6.1
+  #stripe_payment: ^1.0.5
+  cached_network_image: ^2.0.0-rc.1
+  flutter_cache_manager: ^1.1.3
+  date_range_picker: ^1.0.5
+  intl: ^0.16.0
+  square_in_app_payments: ^1.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
